--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -10,19 +10,19 @@
   </div>
 
   <mat-divider></mat-divider>
-    
+
   <div class="row py-4">
 
     <!-- lado izquierdo -->
     <div class="col-md-3">
-      
+
       <mat-card>
-      
+
         <form class="example-form" [formGroup]="myForm">
 
           <!-- imagen -->
           <img mat-card-image class="card-form-img" src="{{pathImage}}{{imagenSeleccionada}}">
-      
+
           <!-- id - readonly -->
           <mat-form-field class="example-full-width">
             <mat-label>ID</mat-label>
@@ -47,7 +47,7 @@
               El campo es <strong>Requerido</strong>
             </mat-error>
           </mat-form-field>
-          
+
           <!-- sku - oblig -->
           <mat-form-field class="example-full-width">
             <mat-label>SKU</mat-label>
@@ -84,10 +84,10 @@
             <mat-label>Cantidad</mat-label>
             <input type="number" matInput formControlName="cantidad" >
           </mat-form-field>
-          
+
           <!-- imagen - upload -->
           <input type="file" name="photo" ng2FileSelect [uploader]="uploader" (change)=onChange($event) />
-         
+
           <!-- destacado -->
           <mat-form-field class="example-full-width">
             <input type="number" matInput formControlName="destacado" hidden>
@@ -104,17 +104,17 @@
           </mat-card-actions>
 
         </form>
-        
+
       </mat-card>
-            
+
     </div>
 
     <!-- lado derecha -->
     <div class="col-md-9">
-         
+
       <ngx-datatable
           class="material datatable-data-prod"
-          [rows]=dato.docs
+          [rows]="dato.docs"
           [headerHeight]="50"
           [footerHeight]="50"
           rowHeight="auto"
@@ -125,23 +125,23 @@
           (page)="setPage($event)"
           (activate)="onActivate($event)"
           >
-          
+
           <ngx-datatable-column name="Imagen" prop="imagen">
             <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-              <img class="table-avatar-img" src="{{pathImage}}{{row.imagen.filename}}"> 
-            </ng-template>  
+              <img class="table-avatar-img" src="{{pathImage}}{{row.imagen.filename}}">
+            </ng-template>
           </ngx-datatable-column>
 
           <ngx-datatable-column *ngFor="let col of columns" [name]="col.name" [prop]="col.prop"></ngx-datatable-column>
-      
+
           <ngx-datatable-column name="Eliminar" prop="id" >
             <ng-template let-row="row" let-value="value" ngx-datatable-cell-template >
               <a (click)="borrar(value)" class="waves-effect waves-light btn red darken-3"><i class="material-icons">delete</i></a>
-            </ng-template>  
+            </ng-template>
           </ngx-datatable-column>
-      
+
         </ngx-datatable>
-      
+
     </div>
 
   </div> <!--row-->
