--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -11,3 +11,22 @@ mat-toolbar{
 .mat-menu-panel, #mat-menu-panel-0 {
   overflow: hidden !important;
 }
+
+.example-spacer {
+  flex: 1 1 auto;
+}
+
+.col-menu{
+  text-align: right;
+}
+
+
+.logo-img{
+  height: 35px;
+  vertical-align: middle;
+  font-family: 'pacific';
+}
+
+button{
+  margin: 0px !important;
+}
