--- a/src/app/pages/categorias/categorias.component.html
+++ b/src/app/pages/categorias/categorias.component.html
@@ -1,104 +1,100 @@
 <div class="container">
+
   <div class="row">
-    <h1 class="titulo">Categorias</h1>
+    <div class="col-md-12 titulo">
+      <h1>{{titulo}}</h1>
+    </div>
+    <div class="col-md-12 subtitulo">
+      <h3>{{subtitulo}}</h3>
+    </div>
   </div>
 
-  <div class="row">
-    <div class="col-md-3 col-izq-cat">
-      <mat-card>
-        <form class="example-form" [formGroup]="myForm">
-          <img
-            mat-card-image
-            src="https://material.angular.io/assets/img/examples/shiba2.jpg"
-            alt="Photo of a Shiba Inu"
-          />
+  <mat-divider></mat-divider>
+    
+  <div class="row py-4">
 
-          <!-- id -->
+    <!-- lado izquierdo -->
+    <div class="col-md-3">
+      
+      <mat-card>
+      
+        <form class="example-form" [formGroup]="myForm">
+
+          <!-- imagen -->
+          <img mat-card-image class="card-form-img" src="{{pathImage}}{{imagenSeleccionada}}">
+
+          <!-- id - readonly -->
           <mat-form-field class="example-full-width">
             <mat-label>ID</mat-label>
-            <input
-              matInput
-              formControlName="_id"
-              [(ngModel)]="categoriasService.selectedCategoria._id"
-              disabled
-            />
+            <input matInput formControlName="_id" readonly>
+            <mat-icon matSuffix>fingerprint</mat-icon>
           </mat-form-field>
-
+          
           <!-- descripcion - oblig -->
           <mat-form-field class="example-full-width">
-            <mat-label>Descripción de categoría</mat-label>
-            <input
-              matInput
-              formControlName="descripcion"
-              [(ngModel)]="categoriasService.selectedCategoria.descripcion"
-            />
-            <mat-error
-              *ngIf="
-                myForm.get('descripcion').hasError('required') &&
-                myForm.get('descripcion').dirty
-              "
-            >
+            <mat-label>Descripcion</mat-label>
+            <input matInput formControlName="descripcion" >
+            <mat-error *ngIf="myForm.get('descripcion').hasError('required') && myForm.get('descripcion').dirty ">
               El campo es <strong>Requerido</strong>
             </mat-error>
           </mat-form-field>
-
-          <mat-card-actions>
-            <button
-              mat-raised-button
-              color="primary"
-              [disabled]="myForm.invalid"
-              (click)="altaCategoria()"
-            >
-              Guardar
-            </button>
-            <button mat-button (click)="resetForm()">Limpiar</button>
+                                                
+          <!-- imagen - upload -->
+          <input type="file" name="photo" ng2FileSelect [uploader]="uploader" (change)=onChange($event) />
+         
+          <!-- acciones -->
+          <mat-card-actions align="center">
+            <button mat-raised-button color="primary" [disabled]="myForm.invalid" (click)="alta()">Guardar</button>
+            <button mat-stroked-button (click)="resetForm()">Limpiar</button>
           </mat-card-actions>
+
         </form>
+        
       </mat-card>
+            
     </div>
 
-    <div class="col-md-9 col-der-cat">
+    <!-- lado derecha -->
+    <div class="col-md-9">
+         
       <ngx-datatable
-        class="material"
-        [rows]="dato.docs"
-        [headerHeight]="50"
-        [footerHeight]="50"
-        rowHeight="auto"
-        columnMode="force"
-        [externalPaging]="true"
-        [count]="dato.totalDocs"
-        [limit]="dato.limit"
-        (page)="setPage($event)"
-        (activate)="modificar($event)"
-      >
-        <ngx-datatable-column name="Imagen" prop="id">
-          <ng-template let-row="rows" let-value="value" ngx-datatable-cell-template>
-            <img
-              class="img-thumbnail"
-              style="height: auto; width: 100px;"
-              src="https://picsum.photos/200/200"
-              alt="Card image cap"
-            />
-          </ng-template>
-        </ngx-datatable-column>
+          class="material datatable-data-cate"
+          [rows]= dato.docs
+          [headerHeight]="50"
+          [footerHeight]="50"
+          rowHeight="auto"
+          columnMode="force"
+          [externalPaging]="true"
+          [count]="dato.totalDocs"
+          [limit]="dato.limit"
+          (page)="setPage($event)"
+          (activate)="onActivate($event)"
+          >
+          
+          <ngx-datatable-column name="Imagen" prop="imagen">
+            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+              <img class="table-avatar-img" src="{{pathImage}}{{row.imagen.filename}}"> 
+            </ng-template>  
+          </ngx-datatable-column>
 
-        <ngx-datatable-column
-          *ngFor="let col of columns"
-          [name]="col.name"
-          [prop]="col.prop"
-        ></ngx-datatable-column>
+          <ngx-datatable-column *ngFor="let col of columns" [name]="col.name" [prop]="col.prop"></ngx-datatable-column>
 
-        <ngx-datatable-column name="Acciones" prop="id">
-          <ng-template let-row="rows" let-value="value" ngx-datatable-cell-template>
-            <a class="waves-effect waves-light btn"
-              ><i class="material-icons">edit</i></a
-            >
-            <a (click)="borrar(value)" class="waves-effect waves-light btn red darken-3"><i class="material-icons">delete</i></a
-            >
-          </ng-template>
-        </ngx-datatable-column>
-      </ngx-datatable>
+          <ngx-datatable-column name="Subcategoria" prop="subcategorias">
+            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+                <p *ngFor="let val of value">{{val.descripcion}}</p>
+            </ng-template>  
+          </ngx-datatable-column>
+      
+          <ngx-datatable-column name="Eliminar" prop="id" >
+            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template >
+              <a (click)="borrar(value)" class="waves-effect waves-light btn red darken-3"><i class="material-icons">delete</i></a>
+            </ng-template>  
+          </ngx-datatable-column>
+      
+        </ngx-datatable>
+      
     </div>
-  </div>
-</div>
-<!--container-->
+
+  </div> <!--row-->
+
+</div> <!--container-->
