--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,3 +1,44 @@
-<div class="container py-3">
-    <h1>Login</h1>
+<div class="container">
+
+  <div class="row py-5 justify-content-center">
+
+    <div class="col-10 col-sm-4">
+
+      <mat-card class="example-card">
+
+        <form class="example-form" [formGroup]="myForm">
+
+          <mat-card-header>
+            <mat-card-title>Login</mat-card-title>
+            <mat-card-subtitle>Ingresa tus datos</mat-card-subtitle>
+          </mat-card-header>
+
+          <mat-form-field class="example-full-width" appearance="fill">
+            <mat-label>Usuario</mat-label>
+            <input matInput formControlName="usuario"  autocomplete="off">
+          </mat-form-field>
+
+          <mat-form-field class="example-full-width" appearance="fill">
+            <mat-label>Introduce tu contraseña</mat-label>
+            <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
+            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </button>
+          </mat-form-field>
+
+          <mat-card-actions align="center">
+            <button mat-raised-button color="primary" (click)="login()">Entrar</button>&nbsp;
+            <button mat-flat-button (click)="openDialogRegister()">registrarme</button>
+          </mat-card-actions>
+
+        </form>
+
+      </mat-card>
+
+    </div>
+
+
   </div>
+
+
+</div>
